--- a/Par ou Ímpar/index.html
+++ b/Par ou Ímpar/index.html
@@ -34,6 +34,12 @@
                 num.value = ""
                 num.focus()
             }
+          
+            document.addEventListener('keyup', e => {
+                if (e.keyCode === 13) {
+                    gerar();
+                }
+            })
 
 
         </script>
